<resources>
    <string name="app_name">Dice App</string>
    <string name="start_button_text">Start</string>
    <string name="image_label">Dice</string>
    <string name="dice_label">Number of Dices:</string>
    <string name="number_of_sides">Number of Sides:</string>
    <string name="setting_button_play">Play</string>
    <string name="dices_default_value">2</string>
    <string name="sides_default_value">6</string>
    <string name="plus_one">+</string>
    <string name="minus_one">-</string>
    <string name ="roll">Roll</string>
    <string name="roll_header">Shake To Roll</string>
    <string name="total_label">Total:</string>
    <string name="total">None</string>
</resources>
