<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="40dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@drawable/dice"
            android:contentDescription="@string/image_label"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/dice_label" />
            <TextView android:id="@+id/dices_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dices_default_value"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_dice_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="2dp"
                    android:text="@string/plus_one" />

                <Button
                    android:id="@+id/button_dice_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="2dp"
                    android:text="@string/minus_one" />
            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/number_of_sides"/>
            <TextView android:id="@+id/sides_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/sides_default_value"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_sides_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="2dp"
                        android:text="@string/plus_one" />

                    <Button
                        android:id="@+id/button_sides_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="2dp"
                        android:text="@string/minus_one" />
                </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"/>
    <Button android:id="@+id/game_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/setting_button_play"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="55dp"/>
</LinearLayout>