<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:scrollbars="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll_header"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="35dp"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:id="@+id/dice_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:width="30sp"
            android:height="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:width="30sp"
            android:height="30sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"/>
        <TextView android:id="@+id/dice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="30dp"
            android:height="30dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView android:id="@+id/dice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="30dp"
            android:height="30dp"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView android:id="@+id/dice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="30dp"
            android:height="30dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:id="@+id/dice6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="30dp"
            android:height="30dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <TextView android:id="@+id/dice_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <TextView android:id="@+id/text_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <Button android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_label"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>